--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -8,11 +8,14 @@ click==8.1.7
 comm==0.2.1
 debugpy @ file:///croot/debugpy_1690905042057/work
 decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+distro==1.9.0
 executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
 fastapi==0.110.0
 filelock==3.13.1
 fsspec==2024.2.0
 h11==0.14.0
+httpcore==1.0.4
+httpx==0.27.0
 huggingface-hub==0.20.3
 idna==3.6
 IProgress==0.4
@@ -42,6 +45,7 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
+openai==1.12.0
 packaging @ file:///croot/packaging_1693575174725/work
 parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
 pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
