--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,15 +1,15 @@
 accelerate==0.27.2
 annotated-types==0.6.0
 anyio==4.3.0
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
+asttokens==2.0.5
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 comm==0.2.1
-debugpy @ file:///croot/debugpy_1690905042057/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+debugpy==1.6.7
+decorator==5.1.1
 distro==1.9.0
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
+executing==0.8.3
 fastapi==0.110.0
 filelock==3.13.1
 fsspec==2024.2.0
@@ -19,18 +19,18 @@ httpx==0.27.0
 huggingface-hub==0.20.3
 idna==3.6
 IProgress==0.4
-ipykernel @ file:///croot/ipykernel_1705933831282/work
-ipython @ file:///croot/ipython_1704833016303/work
+ipykernel==6.28.0
+ipython==8.20.0
 ipywidgets==8.1.2
-jedi @ file:///work/ci_py311_2/jedi_1679336495545/work
+jedi==0.18.1
 Jinja2==3.1.3
-jupyter_client @ file:///croot/jupyter_client_1699455897726/work
-jupyter_core @ file:///croot/jupyter_core_1698937308754/work
+jupyter_client==8.6.0
+jupyter_core==5.5.0
 jupyterlab_widgets==3.0.10
 MarkupSafe==2.1.5
-matplotlib-inline @ file:///work/ci_py311/matplotlib-inline_1676823841154/work
+matplotlib-inline==0.1.6
 mpmath==1.3.0
-nest-asyncio @ file:///croot/nest-asyncio_1708532673751/work
+nest-asyncio==1.6.0
 networkx==3.2.1
 numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
@@ -46,37 +46,40 @@ nvidia-nccl-cu12==2.19.3
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
 openai==1.12.0
-packaging @ file:///croot/packaging_1693575174725/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-platformdirs @ file:///croot/platformdirs_1692205439124/work
-prompt-toolkit @ file:///croot/prompt-toolkit_1704404351921/work
-psutil @ file:///work/ci_py311_2/psutil_1679337388738/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
+packaging==23.1
+parso==0.8.3
+pexpect==4.8.0
+pip==23.3.1
+platformdirs==3.10.0
+prompt-toolkit==3.0.43
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pydantic==2.6.2
 pydantic_core==2.16.3
-Pygments @ file:///croot/pygments_1684279966437/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+Pygments==2.15.1
+python-dateutil==2.8.2
 PyYAML==6.0.1
-pyzmq @ file:///croot/pyzmq_1705605076900/work
+pyzmq==25.1.2
 regex==2023.12.25
 requests==2.31.0
 safetensors==0.4.2
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+setuptools==68.2.2
+six==1.16.0
 sniffio==1.3.0
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
+stack-data==0.2.0
 starlette==0.36.3
 sympy==1.12
 tokenizers==0.15.2
 torch==2.2.1
-tornado @ file:///croot/tornado_1696936946304/work
+tornado==6.3.3
 tqdm==4.66.2
-traitlets @ file:///work/ci_py311/traitlets_1676823305040/work
+traitlets==5.7.1
 transformers==4.38.1
 triton==2.2.0
 typing_extensions==4.9.0
 urllib3==2.2.1
 uvicorn==0.27.1
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+wcwidth==0.2.5
+wheel==0.41.2
 widgetsnbextension==4.0.10
