--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -59,6 +59,7 @@ pydantic==2.6.2
 pydantic_core==2.16.3
 Pygments==2.15.1
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 PyYAML==6.0.1
 pyzmq==25.1.2
 regex==2023.12.25
